--- a/src/main/webapp/stats.html
+++ b/src/main/webapp/stats.html
@@ -24,6 +24,15 @@
 </head>
 
 <body bgcolor="#F0F0FF" >
+<nav class="navbar navbar-default">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+            <li><a href="/">Javascript</a></li>
+            <li><a href="/html/user">MVC Template (jsp)</a></li>
+            <li class="active"><a href="stats.html">Stats</a></li>
+        </ul>
+    </div>
+</nav>
 <center>
 <h1>Nombre d'utilisateur dans la base <br><br><br></h1>
 
