--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,6 +21,7 @@
         <ul class="nav navbar-nav">
             <li class="active"><a href="/">Javascript</a></li>
             <li><a href="/html/user">MVC Template (jsp)</a></li>
+            <li><a href="stats.html">Stats</a></li>
         </ul>
     </div>
 </nav>
