--- a/src/main/webapp/stats.html
+++ b/src/main/webapp/stats.html
@@ -9,12 +9,14 @@
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+    <!--
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css"> -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
     <!-- Code local
     <script src="all.js"></script>-->
-    
+
+    <link rel="stylesheet" href="css/material-bootstrap.css">
     <!-- odometer -->
     <link rel="stylesheet" href="css/odometer-theme-plaza.css" />
     <script src="js/odometer.min.js"></script>
